--- a/src/app/components/info-peliculas/info-peliculas.component.html
+++ b/src/app/components/info-peliculas/info-peliculas.component.html
@@ -1,13 +1,4 @@
-
-
-
 <main class="principal">
-
-  <div class="contenedorFunciones">
-
-
-
-  </div>
   <div class="contenedorInformacion">
 
     <div class="izquierda">
@@ -28,11 +19,10 @@
       <youtube-player videoId="{{pelicula.trailer}}"></youtube-player>
       <p class="descripcion">{{pelicula.descripcion}}</p>
 
-      <button class="botonFunciones"routerLink="/funciones/{{pelicula.titulo}}/{{idPelicula}}" routerLinkActive="active" >Ver funciones</button>
+      <button class="botonFunciones" routerLink="/funciones/{{pelicula.titulo}}/{{idPelicula}}"
+        routerLinkActive="active">Ver funciones</button>
 
     </div>
-
-
   </div>
 
 </main>
